updating trace docs

--- a/docs/docs/tracing/faq.mdx
+++ b/docs/docs/tracing/faq.mdx
@@ -57,3 +57,26 @@ MLflow monitors the trace execution time and expiration in a background thread. 
 ### Q: My trace is split into multiple traces when doing multi-threading. How can I combine them into a single trace?
 
 As MLflow Tracing depends on Python ContextVar, each thread has its own trace context by default, but it is possible to generate a single trace for multi-threaded applications with a few additional steps. Refer to the [Multi-threading](/tracing/api/manual-instrumentation#multi-threading) section for more information.
+
+### Q: What is the latency overhead introduced by Tracing?
+
+Traces are written asynchronously to minimize performance impact. However, tracing still adds minimal latency, particularly when the trace size is large. MLflow recommends testing your application to understand tracing latency impacts before deploying to production.
+
+The following table provides rough estimates for latency impact by trace size:
+
+| Trace size per request | Impact to response speed latency (ms) |
+| ---------------------- | ------------------------------------- |
+| ~10 KB                 | ~ 1 ms                                |
+| ~ 1 MB                 | 50 ~ 100 ms                           |
+| 10 MB                  | 150 ms ~                              |
+
+
+
+### Q: How do I temporarily disable tracing?
+
+To **disable** tracing, the <APILink fn="mlflow.tracing.disable" /> API will cease the collection of trace data from within MLflow and will not log
+any data to the MLflow Tracking service regarding traces.
+
+To **enable** tracing (if it had been temporarily disabled), the <APILink fn="mlflow.tracing.enable" /> API will re-enable tracing functionality for instrumented models
+that are invoked.
+
