--- a/docs/docs/tracing/tracing-schema.mdx
+++ b/docs/docs/tracing/tracing-schema.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_position: 3
-sidebar_label: Data Structure
+sidebar_position: 5
+sidebar_label: Trace Data Model
 pagination_label: Trace Data Structure
 ---
 
@@ -12,6 +12,10 @@ import TabItem from "@theme/TabItem";
 
 This document provides a detailed view of the schema for traces and its ingredients. MLflow traces are **compatible to OpenTelemetry specs**,
 but we also define a few additional layers of structure upon the OpenTelemetry Spans to provide additional metadata about the trace.
+
+# <span style={{color: "red"}}>TODO: add in assessment</span>
+# <span style={{color: "red"}}>TODO: add in details about chat messages & tools that we extract</span>
+
 
 ## Structure of Traces
 
