--- a/docs/docs/tracing/using_traces/ui.mdx
+++ b/docs/docs/tracing/using_traces/ui.mdx
@@ -4,6 +4,9 @@ import TabItem from "@theme/TabItem";
 
 # MLflow Tracing UI
 
+## <span style={{color: "red"}}>TODO: update this to reflect the new UIs</span>
+
+
 ## Traces within MLflow Experiments
 
 After logging your traces, you can view them in the [MLflow UI](/tracking/#tracking_ui), under the "Traces" tab in the main experiment page. This tab is also available within the individual run pages, if your trace was logged within a run context.
