--- a/docs/docs/tracing/features/session.mdx
+++ b/docs/docs/tracing/features/session.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_position: 6
-sidebar_label: Session
+sidebar_position: 3
+sidebar_label: Sessions
 ---
 
 import { APILink } from "@site/src/components/APILink";
