--- a/docs/docs/llms/tutorials/index.mdx
+++ b/docs/docs/llms/tutorials/index.mdx
@@ -2,6 +2,71 @@
 sidebar_position: 1
 ---
 
+There are 
+
+* Tutorials
+* How to guides
+
+* Tracing
+
+- Overview
+- Data Structure
+- Logging traces 
+    - Automatic tracing
+    - Manual tracing
+        - Fluent APIs (reccomended)
+        - Low level APIs (advanced)
+- Using traces
+ - Querying traces
+ - Visualizing traces
+- Features
+ - Tags
+ - Sessions
+ - Users
+ - Versioning
+ - Trace IDs
+- Integrations
+
+* Evaluate & Monitor
+
+* Datasets & testing
+- Evaluation Datasets
+- Evaluation Runs
+
+* Monitoring
+- Running scorers
+- Alerts
+
+* Scorers (Metrics)
+- Quality assessments
+    - Built in LLM judges
+    - Custom LLM judges
+    - Custom assessments
+- Operational metrics
+    - Built in metrics
+    - Custom metrics
+
+* Human feedback
+- Feedback Sessions
+- Feedback Schemas
+
+
+
+* Build
+ - Prompt Registry
+ - Version Tracking
+
+- Defining metrics
+
+* Concepts
+- Trace
+    - Assessments
+    - Operational metrics
+    - Tags
+- Evaluation Dataset
+- Evaluation Runs 
+- Scorers
+
 
 # How to
 
