--- a/docs/docs/tracing/ui.mdx
+++ b/docs/docs/tracing/ui.mdx
@@ -32,7 +32,7 @@ This table includes high-level information about the traces, such as the trace I
 
 ## Browsing span data
 
-In order to browse the span data of an individual trace, simply click on the link in the "Request ID" or "Trace name" columns to open the trace viewer:
+In order to browse the span data of an individual trace, simply click on the link in the "Trace ID" or "Trace name" columns to open the trace viewer:
 
 ![Trace Browser](/images/llms/tracing/tracing-top.gif)
 
