eval driven dev todo

--- a/docs/docs/llms/eval-workflow.mdx
+++ b/docs/docs/llms/eval-workflow.mdx
@@ -3,6 +3,8 @@ import { Card, LogoCard, CardGroup, PageCard, SmallLogoCard } from "@site/src/co
 
 # Evaluation-driven development 
 
+## <span style={{color: "red"}}>TODO: what is the right way to guide users to this page first?</span>
+
 ## Why GenAI needs a different development workflow
 
 There are 2 inherent challenges in delivering high-quality generative AI apps:
