--- a/docs/docs/llms/concepts/index.mdx
+++ b/docs/docs/llms/concepts/index.mdx
@@ -1,7 +1,22 @@
 ---
 sidebar_position: 1
+sidebar_label: Overview
 ---
-# Overview
+# Concepts
+
+
+## <span style={{color: "red"}}>make sure it has all of these</span>
+
+* Concepts
+- Trace
+    - Assessments
+    - Operational metrics
+    - Tags
+- Evaluation Dataset
+- Evaluation Runs 
+- Scorers
+
+
 
 This page introduces the core concepts of MLflow's GenAI capabilities, providing a foundation for understanding how to build, evaluate, and manage production-ready GenAI applications.
 
