--- a/docs/docs/tracing/faq.mdx
+++ b/docs/docs/tracing/faq.mdx
@@ -3,6 +3,8 @@ sidebar_position: 7
 sidebar_label: FAQ
 ---
 
+import { APILink } from "@site/src/components/APILink";
+
 # FAQ
 
 ### Q: I cannot open my trace in the MLflow UI. What should I do?
