fix broken pages

--- a/docs/docs/tracing/features/tags.mdx
+++ b/docs/docs/tracing/features/tags.mdx
@@ -2,6 +2,8 @@
 sidebar_position: 1
 ---
 
+import { APILink } from "@site/src/components/APILink";
+
 # Tags 
 
 ## <span style={{color: "red"}}>TODO: add more prose about WHY you use tags</span>
