Fix LoggedModel API links
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/docs/docs/mlflow-3/index.mdx
+++ b/docs/docs/mlflow-3/index.mdx
@@ -20,7 +20,7 @@ With MLflow 3.0, it's now easier than ever to:
 - Select the best models, agents, and generative AI applications for production with an **enhanced performance comparison experience** powered by MLflow's tracing and evaluation capabilities.
 
 MLflow 3.0's enhanced model tracking helps you manage and evaluate different model, agent, and generative AI application configurations in your experiments. 
-Improved comparison workflows with the new <APILink fn="mlflow.entities.LoggedModel">LoggedModel</APILink> enable you to quickly identify the best candidates for production, 
+Improved comparison workflows with the new <APILink fn="mlflow.entities.LoggedModel" baseUrl="https://mlflow.org/docs/3.0.0rc0">LoggedModel</APILink> enable you to quickly identify the best candidates for production, 
 and MLflow tracing provides rich observability everywhere that your models, agents, and generative AI applications are deployed.
 
 ## Enhanced Model Tracking
@@ -29,12 +29,12 @@ In MLflow 3.0, we introduce a refined architecture along with revamped APIs and 
 With GenAI agents, there are multiple rounds of offline evaluation via batch jobs and interactive queries from human beta testers.
 In deep learning, training often generates multiple model checkpoints, where the best candidates are further evaluated before production deployment. 
 
-We are introducing a new first-class object, the <APILink fn="mlflow.entities.LoggedModel">LoggedModel</APILink> entity, into MLflow Tracking to streamline these processes. As you define and evaluate your GenAI agents in code, 
+We are introducing a new first-class object, the <APILink fn="mlflow.entities.LoggedModel" baseUrl="https://mlflow.org/docs/3.0.0rc0">LoggedModel</APILink> entity, into MLflow Tracking to streamline these processes. As you define and evaluate your GenAI agents in code, 
 or your deep learning jobs create and evaluate models, they will be automatically stored as MLflow Logged Models in your MLflow Experiment. 
 
-When developing a new version of a GenAI agent or application, you can group all of the traces and metrics from interactive queries and automated evaluation jobs using MLflow's <APILink fn="mlflow.entities.LoggedModel">LoggedModel</APILink> API. 
+When developing a new version of a GenAI agent or application, you can group all of the traces and metrics from interactive queries and automated evaluation jobs using MLflow's <APILink fn="mlflow.entities.LoggedModel" baseUrl="https://mlflow.org/docs/3.0.0rc0">LoggedModel</APILink> API. 
 This enables rich, comprehensive comparisons across versions.
-Similarly, every deep learning checkpoint is stored as a <APILink fn="mlflow.entities.LoggedModel">LoggedModel</APILink> with its own metrics and parameters, simplifying the process of identifying the best checkpoint for deployment or continued training.
+Similarly, every deep learning checkpoint is stored as a <APILink fn="mlflow.entities.LoggedModel" baseUrl="https://mlflow.org/docs/3.0.0rc0">LoggedModel</APILink> with its own metrics and parameters, simplifying the process of identifying the best checkpoint for deployment or continued training.
 
 ### Quickstart
 
